--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "starter-kit",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.5"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
